--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -25,7 +25,7 @@ body{
 .main-content {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -71,4 +71,11 @@ body{
 
 .button-landing:active {
     transform: translateY(0);
+}
+
+.footer {
+    position: relative;
+    text-align: center;
+    color: hsl(214, 10%, 43%);
+    margin-top: -1rem;
 }
