--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -8,7 +8,14 @@ body{
     min-height: 100vh;
     position: relative;
     overflow-x: hidden;
-    background: linear-gradient(135deg, hsl(214, 85%, 30%) 0%, hsl(214, 85%, 50%) 50%, hsl(195, 100%, 50%) 100%);
+    background: conic-gradient(
+        from 0deg,
+        #09a0e3 0deg,
+        #1378d7 70deg,
+        #1e4fcc 110deg,
+        #00c1ec 280deg,
+        #09a0e3 310deg
+    );
     color: hsl(220, 15%, 25%);
 }
 
@@ -19,7 +26,7 @@ body{
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    min-width: 15rem;
+    min-width: 25rem;
 }
 
 .main-content {
