--- a/frontend/css/edit_user.css
+++ b/frontend/css/edit_user.css
@@ -76,6 +76,10 @@ body {
     width: 100%;
 }
 
+.form-container h1{
+    margin-bottom: 2rem;
+}
+
 .form-group{
     display: flex;
     flex-direction: column;
@@ -85,6 +89,7 @@ body {
 .form-group input{
     width: 100%;
     box-sizing: border-box;
+    margin-bottom: 1rem;
 }
 
 .form-input {
