--- a/frontend/css/incidencias.css
+++ b/frontend/css/incidencias.css
@@ -48,7 +48,36 @@
 }
 
 .description-input{
+    border:  2px solid hsl(220, 4%, 57%);
     min-height: 20rem;
     min-width: 10rem;
     border-radius: .5rem;
+    padding-left: .1rem;
 }
+
+.button-form {
+    display: flex;
+    justify-content: center;
+}
+
+.submit-button {
+    margin-top: 2rem;
+    padding: .75rem 2rem;
+    background: linear-gradient(135deg, hsl(214, 85%, 50%), hsl(195, 100%, 50%));
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.submit-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 30px rgba(33, 150, 243, 0.4);
+}
+
+
