--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -3,3 +3,10 @@
 body *{
     font-family: 'Rubik', sans-serif;
 }
+
+.footer {
+    position: relative;
+    text-align: center;
+    color: hsl(214, 10%, 43%);
+    margin-top: -1rem;
+}
