--- a/frontend/css/inactive_sensor_list.css
+++ b/frontend/css/inactive_sensor_list.css
@@ -12,6 +12,10 @@ body {
     overflow-x: hidden;
 }
 
+.main-content {
+    padding: 2rem;
+}   
+
 #sensores-title {
     text-align: center;
     margin: 2rem 0;
@@ -41,4 +45,55 @@ body {
 .sensor-card:hover {
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/*Filtros*/
+
+.filter-container{
+    background: white;
+    display: flex;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    justify-content: space-between;
+}
+
+.filter-container * {
+    font-weight: 600;
+}
+
+.filter-buttons{
+    display: flex;
+    gap: 2rem;
+}
+
+.search-container{
+    display: flex;
+    gap: 2rem;
+}
+
+.filter-buttons button {
+    background: hsl(214, 85%, 50%);
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.filter-buttons button:hover {
+    background: hsl(214, 85%, 40%);
+}
+
+.filter-buttons button.activo{
+    background: white;
+    color: hsl(214, 85%, 50%);
+    border: 2px solid hsl(214, 85%, 50%);
+}
+
+.search-container input {
+    padding: 0.5rem 1rem;
+    border: 2px solid hsl(220, 15%, 85%);
+    border-radius: 0.5rem;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
