--- a/frontend/css/incidencias_admin.css
+++ b/frontend/css/incidencias_admin.css
@@ -24,6 +24,7 @@
     align-items: center;
     flex-direction: column;
     margin-bottom: 2rem;
+    color: white;
 }
 
 .incidencias-content{
@@ -82,7 +83,6 @@
     width: 80%;
     height: 100%;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
-    margin-top: 1rem;
 }
 
 
