--- a/frontend/css/register.css
+++ b/frontend/css/register.css
@@ -171,13 +171,6 @@
 
 /* Responsive */
 @media (max-width: 768px) {
-    .nav {
-        display: none;
-    }
-
-    .header-content {
-        padding: 1rem;
-    }
 
     .form-container {
         padding: 2rem;
@@ -185,5 +178,12 @@
 
     .form-title {
         font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .logo{
+        margin-right: 1rem;
     }
 }
