--- a/frontend/css/edit_user.css
+++ b/frontend/css/edit_user.css
@@ -129,3 +129,21 @@
     margin-top: -1rem;
 }
 
+@media (max-width: 768px) {
+
+    .profile-container {
+        padding: 2rem 2rem 1.5rem 2rem;
+    }
+
+    .form-title {
+        font-size: 1.5rem;
+    }
+
+    .logo{
+        margin-right: 1rem;
+    }
+
+    h1{
+        font-size: 1.5rem;
+    }
+}
