--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -122,3 +122,21 @@
     color: hsl(214, 10%, 43%);
     margin-top: -1rem;
 }
+
+@media (max-width: 768px) {
+
+    .form-container {
+        padding: 2rem;
+    }
+
+    .form-title {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .logo{
+        margin-right: 1rem;
+    }
+}
