--- a/frontend/css/incidencias_admin.css
+++ b/frontend/css/incidencias_admin.css
@@ -38,9 +38,10 @@
     z-index: 10;
     position: relative;
     overflow-y: auto;
-    width: 20%;
+    width: 25%;
     height: 100%;
     padding-top: 1rem;
+    padding: 1rem .5rem 0 .5rem;
 
      scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE y Edge antiguo */
@@ -71,20 +72,90 @@
     padding: 1rem;
     margin-bottom: 1rem;
     border: 2px solid hsl(213, 37%, 15%);
+    transition: 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
-
+.incident-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
 
 .select-incident {
     background: white;
     border-radius: 8px;
-    padding: 2rem;
+    padding: 2.5rem;
     width: 80%;
-    height: 100%;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.incident-information {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: .5rem;
+}
+
+.incident-dates{
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+}
+
+.create-date, .update-date {
+    display: flex;
+    gap: .5rem;
+}
+
+.incident-actions {
+    margin: auto auto 3rem auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.incident-status{
+    text-align: center;
+}
+
+.incident-buttons{
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
 }
 
 
+.solution-button {
+    background: hsl(120, 85%, 40%);
+    color: white;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    font-weight: 600;
+}
 
+.rechazar-button {
+    background: hsl(0, 85%, 50%);
+    color: white;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    font-weight: 600;
+}
 
+.solution-button:hover {
+    background: hsl(120, 85%, 30%);
+}
 
+.rechazar-button:hover {
+    background: hsl(0, 85%, 40%);
+}
