--- a/frontend/css/incidencias_admin.css
+++ b/frontend/css/incidencias_admin.css
@@ -76,11 +76,16 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    cursor: pointer;
+}
+
+.incident-card.active{
+    border: 4px solid hsl(204, 100%, 1%);
 }
 
 .incident-card:hover {
     transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .select-incident {
@@ -120,7 +125,10 @@
 }
 
 .incident-status{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: .25rem;
+    
 }
 
 .incident-buttons{
