--- a/frontend/css/map.css
+++ b/frontend/css/map.css
@@ -83,4 +83,33 @@ body {
     box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
 }
 
+.heatmap-legend {
+    background: white;
+    padding: 10px 14px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.heatmap-legend h4 {
+    margin: 0 0 8px 0;
+    font-size: 14px;
+    text-align: center;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 4px;
+}
+
+.legend-item .color {
+    width: 16px;
+    height: 16px;
+    border-radius: 3px;
+}
+
+
 /*Bastante responsive*/
